--- a/calendar.html
+++ b/calendar.html
@@ -139,85 +139,22 @@
                         <div class="calen-card-box">
                             <div class="calen-card_vrte">
                                 <div class="calen-card_head">
-                                    <div class="calen-pic"><a href="calendar_more.html"><img src="images/event.jpg"></a></div>
+                                    <div class="calen-pic"><a href="calendar_more.html"><img src="images/auto.png"></a></div>
                                     <div class="calen-card_tab news_blue">展覽</div>
                                 </div>
                             </div>
-                            <div class="calen-card_issuse">
-                                <div class="calen-card_date">7/5-7/9</div>
-                                <div class="calen-title">2018台北寵物用品展</div>
-                                <div class="calen-font">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="calendar_more.html">繼續閱讀</a></div>
-
-                            </div>
-                        </div>
-                        <div class="calen-card-box">
-                            <div class="calen-card_vrte">
-                                <div class="calen-card_head">
-                                    <div class="calen-pic"><a href="calendar_more.html"><img src="images/event.jpg"></a></div>
-                                    <div class="calen-card_tab news_blue">展覽</div>
+                                <div class="calen-card_issuse">
+                                    <div class="calen-card_date">7/5-7/9</div>
+                                    <div class="calen-title">2019 台北國際自動化工業大展</div>
+                                    <div class="calen-font">
+                                        <ul>
+                                            <li>展覽活動期間：2019.08.21 - 2018.08.24繼續閱讀</li>
+                                            <li>展覽活動地點：一、四樓展場</li>
+                                            <li>展覽主辦單位：展昭國際企業股份有限公司</li>
+                                        </ul>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="calen-card_issuse">
-                                <div class="calen-card_date">7/5-7/9</div>
-                                <div class="calen-title">2018台北寵物用品展</div>
-                                <div class="calen-font">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="calendar_more.html">繼續閱讀</a></div>
-                            </div>
                         </div>
-                        <div class="calen-card-box">
-                            <div class="calen-card_vrte">
-                                <div class="calen-card_head">
-                                    <div class="calen-pic"><a href="calendar_more.html"><img src="images/event.jpg"></a></div>
-                                    <div class="calen-card_tab news_yellow">會議及活動</div>
-                                </div>
-                            </div>
-                            <div class="calen-card_issuse">
-                                <div class="calen-card_date">7/5-7/9</div>
-                                <div class="calen-title">2018台北寵物用品展</div>
-                                <div class="calen-font">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="calendar_more.html">繼續閱讀</a></div>
-                            </div>
-                        </div>
-                        <div class="calen-card-box">
-                            <div class="calen-card_vrte">
-                                <div class="calen-card_head">
-                                    <div class="calen-pic"><a href="calendar_more.html"><img src="images/event.jpg"></a></div>
-                                    <div class="calen-card_tab news_yellow">會議及活動</div>
-                                </div>
-                            </div>
-                            <div class="calen-card_issuse">
-                                <div class="calen-card_date">7/5-7/9</div>
-                                <div class="calen-title">2018台北寵物用品展</div>
-                                <div class="calen-font">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="calendar_more.html">繼續閱讀</a></div>
-                            </div>
-                        </div>
-                        <div class="calen-card-box">
-                            <div class="calen-card_vrte">
-                                <div class="calen-card_head">
-                                    <div class="calen-pic"><a href="calendar_more.html"><img src="images/event.jpg"></a></div>
-                                    <div class="calen-card_tab news_blue">展覽</div>
-                                </div>
-                            </div>
-                            <div class="calen-card_issuse">
-                                <div class="calen-card_date">7/5-7/9</div>
-                                <div class="calen-title">2018台北寵物用品展</div>
-                                <div class="calen-font">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="calendar_more.html">繼續閱讀</a></div>
-                            </div>
-                        </div>
-                        <div class="calen-card-box">
-                            <div class="calen-card_vrte">
-                                <div class="calen-card_head">
-                                    <div class="calen-pic"><a href="calendar_more.html"><img src="images/event.jpg"></a></div>
-                                    <div class="calen-card_tab news_blue">展覽</div>
-                                </div>
-                            </div>
-                            <div class="calen-card_issuse">
-                                <div class="calen-card_date">7/5-7/9</div>
-                                <div class="calen-title">2018台北寵物用品展</div>
-                                <div class="calen-font">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="calendar_more.html">繼續閱讀</a></div>
-                            </div>
-                        </div>
-
-
-
 
                     </div>
                     <div class="page_all">
