--- a/calendar_more.html
+++ b/calendar_more.html
@@ -126,26 +126,28 @@
 
             <div class="orang_wrapper">
                 <div class="news_continer">
-                    <div class="event_more_title">2018台北寵物用品展</div>
+                    <div class="event_more_title">2019 台北國際自動化工業大展</div>
                     <div class="ticket_poster">
                         <table width="100%" border="0">
                           <tr>
-                            <td width="70%"><img src="images/2018last.jpg"></td>
+                            <td width="70%"><img src="images/auto.png"></td>
                             <td width="30%">
                                 <div class="eventpost_title">展覽活動期間：</div>
-                                <div class="news_article">2018.07.06 - 2018.07.09</div>
+                                <div class="news_article">2019.08.21 - 2018.08.24</div>
                                 <div class="eventpost_title">展覽活動地點：</div>
-                                <div class="news_article">一樓展場</div>
+                                <div class="news_article">一、四樓展場</div>
                                 <div class="eventpost_title">展覽主辦單位：</div>
                                 <div class="news_article">展昭國際企業股份有限公司</div>
-                                <a href="#">
-                                <div class="eventpost_btn"><i class="mdi mdi-link-variant"></i>前往官網</div>
-                                </a>
+                                <div class="eventpost_wrap">
+                                    <a href="https://www.autotaiwan.com.tw/" target="_blank">
+                                        <div class="eventpost_btn"><i class="mdi mdi-link-variant"></i>前往官網</div>
+                                    </a>
+                                </div>
                             </td>
                           </tr>
                         </table>
                     </div>
-                    <div class="mod-organizer_title">票價：</div>
+                    <!-- <div class="mod-organizer_title">票價：</div>
                     <div class="expo_table">
                         <div class="ticket_price">
                             <table width="100%" border="0">
@@ -168,7 +170,7 @@
                     <div class="mod-organizer_title">贊助單位：</div>
                     <div class="news_article">車主雜誌、美國職籃、美國職棒、磐石保險經紀人、文森保羅</div>
                     <div class="mod-organizer_title">售票連結：</div>
-                    <div class="news_article"><a href="https://iticket.gmusic.com.tw/application/UTK02/UTK0201_.aspx?PRODUCT_ID=N00FRLC1">https://iticket.gmusic.com.tw/application/UTK02/UTK0201_.aspx?PRODUCT_ID=N00FRLC1</a></div>
+                    <div class="news_article"><a href="https://iticket.gmusic.com.tw/application/UTK02/UTK0201_.aspx?PRODUCT_ID=N00FRLC1">https://iticket.gmusic.com.tw/application/UTK02/UTK0201_.aspx?PRODUCT_ID=N00FRLC1</a></div> -->
                 </div>
             </div>
         </article>
