--- a/index.html
+++ b/index.html
@@ -525,56 +525,25 @@
                             <li><a href="#">會議及活動</a></li>
                         </ul>
                         <div class="viewmore"><a href="#">看更多</a></div>
-
                     </div>
                     <div class="evnt_viewpic">
-                        <a href="#">
+                        <a href="calendar_more.html">
                             <div class="evn_box">
-                                <div class="event_pic"><img src="images/event.jpg"></div>
+                                <div class="event_pic"><img src="images/auto.png"></div>
+                                <div class="calen-card_tab news_blue">展覽</div>
                                 <div class="event_bg">
-                                    <div class="date_event">2018.07.06-07.09</div>
-                                    <div class="date_title">2018台北寵物用品展</div>
-                                    <span class="event_sub-content">展覽活動地點：一樓展場展覽主辦單位：展昭國際企業股份有限公司</div>
-                        </div></a>
-                        <a href="#"><div class="evn_box">
-                            <div class="event_pic"><img src="images/event.jpg"></div>
-                            <div class="event_bg">
-                                <div class="date_event">2018.07.06-07.09</div>
-                                <div class="date_title">2018台北寵物用品展</div>
-                                <span class="event_sub-content">展覽活動地點：一樓展場展覽主辦單位：展昭國際企業股份有限公司</div>
-                        </div></a>
-                        <a href="#"><div class="evn_box">
-                            <div class="event_pic"><img src="images/event.jpg"></div>
-                            <div class="event_bg">
-                                <div class="date_event">2018.07.06-07.09</div>
-                                <div class="date_title">2018台北寵物用品展</div>
-                                <span class="event_sub-content">展覽活動地點：一樓展場展覽主辦單位：展昭國際企業股份有限公司</div>
-                        </div></a>
-                        <a href="#"><div class="evn_box">
-                            <div class="event_pic"><img src="images/event.jpg"></div>
-                            <div class="event_bg">
-                                <div class="date_event">2018.07.06-07.09</div>
-                                <div class="date_title">2018台北寵物用品展</div>
-                                <span class="event_sub-content">展覽活動地點：一樓展場展覽主辦單位：展昭國際企業股份有限公司</div>
-                        </div></a>
-                        <a href="#"><div class="evn_box">
-                            <div class="event_pic"><img src="images/event.jpg"></div>
-                            <div class="event_bg">
-                                <div class="date_event">2018.07.06-07.09</div>
-                                <div class="date_title">2018台北寵物用品展</div>
-                                <span class="event_sub-content">展覽活動地點：一樓展場展覽主辦單位：展昭國際企業股份有限公司</div>
-                        </div></a>
-                        <a href="#"><div class="evn_box">
-                            <div class="event_pic"><img src="images/event.jpg"></div>
-                            <div class="event_bg">
-                                <div class="date_event">2018.07.06-07.09</div>
-                                <div class="date_title">2018台北寵物用品展</div>
-                                <span class="event_sub-content">展覽活動地點：一樓展場展覽主辦單位：展昭國際企業股份有限公司</div>
-                        </div></a>
-
+                                    <div class="date_title">2019 台北國際自動化工業大展</div>
+                                    <div class="event_sub-content">
+                                        <ul>
+                                            <li>展覽活動期間：2019.08.21 - 2018.08.24繼續閱讀</li>
+                                            <li>展覽活動地點：一、四樓展場</li>
+                                            <li>展覽主辦單位：展昭國際企業股份有限公司</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
                     </div>
-                </div>
-
             </div>
 
         </section>
