--- a/transportation6.html
+++ b/transportation6.html
@@ -168,9 +168,11 @@
                 <div class="line_gray"></div>
 
                 <div class="mod-organizer_title">2.台北南港展覽館1館踏車車架位置及Ubike相關資訊：</div>
-                <a href="#">
-                <div class="push_btn">點此查看</div>
-                </a>
+                <div class="eventpost_wrap">
+                    <a href="#">
+                    <div class="push_btn">點此查看</div>
+                    </a>
+                </div>    
 
 
 
