add organizers link

--- a/organizers.html
+++ b/organizers.html
@@ -125,7 +125,7 @@
                 </div>
             </div>
             <div class="pace_bok">
-                <div class="bok-pic lili_pic01"></div>
+                <a href="organizers_item1.html"><div class="bok-pic lili_pic01"></div></a>
                 <div class="bok-pic00 bok_rp">
                     <div class="lili_box">
                         <div class="bok_title">展覽會場</div>
@@ -147,11 +147,11 @@
                         </a>
                     </div>
                 </div>
-                <div class="bok-pic flix02 lili_pic02"></div>
+                <a href="conference-room.html"><div class="bok-pic flix02 lili_pic02"></div></a>
             </div>
 
             <div class="pace_bok">
-                <div class="bok-pic lili_pic03"></div>
+                <a href="public_space.html"><div class="bok-pic lili_pic03"></div></a>
                 <div class="bok-pic00 bok_rp">
                     <div class="lili_box">
                         <div class="bok_title">公共空間</div>
@@ -173,7 +173,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="bok-pic flix02 lili_pic04"></div>
+                <a href="advertisements_ad.html"><div class="bok-pic flix02 lili_pic04"></div></a>
             </div>
             <div class="Vendor-resource_wrapper">
                 <div class="Vendor-resource_title">廠商資源</div>
