--- a/news.html
+++ b/news.html
@@ -136,80 +136,98 @@
 
                 <div class="news_continer">
                     <div class="news-list">
-                        <div class="card-box">
-                            <div class="card_vrte">
-                                <div class="card_head">
-                                    <div class="card_tab news_blue">新聞</div>
-                                    <div class="card_date">2018.08.03</div>
+                        <a href="news_more.html">
+                            <div class="card-box">
+                                <div class="card_vrte">
+                                    <div class="card_head">
+                                        <div class="card_tab news_blue">新聞</div>
+                                        <div class="card_date">2018.08.03</div>
+                                    </div>
+                                <div class="card_title">2018 外貿協會新進人員招考 Come on a journey with us!</div>
                                 </div>
-                            <div class="card_title">2018 外貿協會新進人員招考 Come on a journey with us!</div>
+                                <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...</div>
                             </div>
-                            <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="news_more.html">繼續閱讀</a></div>
-                        </div>
+                        </a>
+                        <a href="news_more.html">
                         <div class="card-box">
                             <div class="card_vrte">
                                 <div class="card_tab news_blue">新聞</div>
                                 <div class="card_date">2018.08.03</div>
                                 <div class="card_title">2018 外貿協會新進人員招考 Come on a journey with us!</div>
                             </div>
-                            <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="news_more.html">繼續閱讀</a></div>
+                            <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...</div>
                         </div>
+                        </a>
+                        <a href="news_more.html">
                         <div class="card-box">
                             <div class="card_vrte">
                                 <div class="card_tab news_yellow">公告</div>
                                 <div class="card_date">2018.08.03</div>
                                 <div class="card_title">2018 外貿協會新進人員招考 Come on a journey with us!</div>
                             </div>
-                            <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="news_more.html">繼續閱讀</a></div>
+                            <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...</div>
                         </div>
+                        </a>
+                        <a href="news_more.html">
                         <div class="card-box">
                             <div class="card_vrte">
                                 <div class="card_tab news_blue">新聞</div>
                                 <div class="card_date">2018.08.03</div>
                                 <div class="card_title">2018 外貿協會新進人員招考 Come on a journey with us!</div>
                             </div>
-                            <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="news_more.html">繼續閱讀</a></div>
+                            <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...</div>
                         </div>
+                        </a>
+                        <a href="news_more.html">
                         <div class="card-box">
                             <div class="card_vrte">
                                 <div class="card_tab news_yellow">公告</div>
                                 <div class="card_date">2018.08.03</div>
                                 <div class="card_title">2018 外貿協會新進人員招考 Come on a journey with us!</div>
                             </div>
-                            <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="news_more.html">繼續閱讀</a></div>
+                            <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...</div>
                         </div>
+                        </a>
+                        <a href="news_more.html">
                         <div class="card-box">
                             <div class="card_vrte">
                                 <div class="card_tab news_blue">新聞</div>
                                 <div class="card_date">2018.08.03</div>
                                 <div class="card_title">2018 外貿協會新進人員招考 Come on a journey with us!</div>
                             </div>
-                            <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="news_more.html">繼續閱讀</a></div>
+                            <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...</div>
                         </div>
+                        </a>
+                        <a href="news_more.html">
                         <div class="card-box">
                             <div class="card_vrte">
                                 <div class="card_tab news_yellow">公告</div>
                                 <div class="card_date">2018.08.03</div>
                                 <div class="card_title">2018 外貿協會新進人員招考 Come on a journey with us!</div>
                             </div>
-                            <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="news_more.html">繼續閱讀</a></div>
+                            <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...</div>
                         </div>
+                        </a>
+                        <a href="news_more.html">
                         <div class="card-box">
                             <div class="card_vrte">
                                 <div class="card_tab news_blue">新聞</div>
                                 <div class="card_date">2018.08.03</div>
                                 <div class="card_title">2018 外貿協會新進人員招考 Come on a journey with us!</div>
                             </div>
-                            <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="news_more.html">繼續閱讀</a></div>
+                            <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...</div>
                         </div>
+                        </a>
+                        <a href="news_more.html">
                         <div class="card-box">
                             <div class="card_vrte">
                                 <div class="card_tab news_yellow">公告</div>
                                 <div class="card_date">2018.08.03</div>
                                 <div class="card_title">2018 外貿協會新進人員招考 Come on a journey with us!</div>
                             </div>
-                            <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="news_more.html">繼續閱讀</a></div>
+                            <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...</div>
                         </div>
+                        </a>
 
 
                     </div>
