--- a/news_more.html
+++ b/news_more.html
@@ -120,7 +120,7 @@
                     <ul>
                         <li><a href="index.html">首頁</a></li>
                         <li>/</li>
-                        <li>最新消息</li>
+                        <li><a href="news.html">最新消息</a></li>
                         <li>/</li>
                         <li class="activeddd">外貿協會台北南港展覽館1館「107年尾牙優惠方案」於5月1日開放申請</li>
                     </ul>
