--- a/calendar_more3.html
+++ b/calendar_more3.html
@@ -11,7 +11,6 @@
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="dist/js/jquery-3.2.1.min.js"></script>
     <title></title>
-
 </head>
 
 <body>
@@ -120,101 +119,62 @@
                     <ul>
                         <li><a href="index.html">首頁</a></li>
                         <li>/</li>
-                        <li class="activeddd">展覽活動一覽</li>
+                        <li><a href="calendar.html">展覽活動一覽</a></li>
+                        <li>/</li>
+                        <li class="activeddd">2019 台灣機器人與智慧自動化展</li>
                     </ul>
                 </div>
             </div>
 
             <div class="orang_wrapper">
-                <div class="orang_tab">
-                    <ul>
-                        <li class="active">全部</li>
-                        <li>展覽</li>
-                        <li>會議及活動</li>
-                    <ul>
-                </div>
-
                 <div class="news_continer">
-                    <div class="calen-list">
-                        <div class="calen-card-box">
-                            <div class="calen-card_vrte">
-                                <div class="calen-card_head">
-                                    <div class="calen-pic"><a href="calendar_more1.html"><img src="images/eventa01.png"></a></div>
-                                    <div class="calen-card_tab news_blue">展覽</div>
+                    <div class="event_more_title">2019 台北國際模具暨模具製造設備暨3D列印展</div>
+                    <div class="ticket_poster">
+                        <table width="100%" border="0">
+                          <tr>
+                            <td width="70%"><img src="images/eventa03.png"></td>
+                            <td width="30%">
+                                <div class="eventpost_title">展覽活動期間：</div>
+                                <div class="news_article">2019.08.21 - 2019.08.24</div>
+                                <div class="eventpost_title">展覽活動地點：</div>
+                                <div class="news_article">一樓展場</div>
+                                <div class="eventpost_title">展覽主辦單位：</div>
+                                <div class="news_article">展昭國際企業股份有限公司</div>
+                                <div class="eventpost_wrap">
+                                    <a href="https://www.autotaiwan.com.tw/" target="_blank">
+                                        <div class="eventpost_btn"><i class="mdi mdi-link-variant"></i>前往官網</div>
+                                    </a>
                                 </div>
-                            </div>
-                                <div class="calen-card_issuse">
-                                    <div class="calen-card_date">8/21-8/24</div>
-                                    <div class="calen-title">2019 台灣機器人與智慧自動化展</div>
-                                    <div class="calen-font">
-                                        <ul>
-                                            <li>展覽活動期間：2019.08.21 - 2019.08.24</li>
-                                            <li>展覽活動地點：一樓展場</li>
-                                            <li>展覽主辦單位：展昭國際企業股份有限公司</li>
-                                        </ul>
-                                    </div>
-                                </div>
-                        </div>
-
-                        <div class="calen-card-box">
-                            <div class="calen-card_vrte">
-                                <div class="calen-card_head">
-                                    <div class="calen-pic"><a href="calendar_more2.html"><img src="images/eventa02.png"></a></div>
-                                    <div class="calen-card_tab news_blue">展覽</div>
-                                </div>
-                            </div>
-                                <div class="calen-card_issuse">
-                                    <div class="calen-card_date">8/21-8/24</div>
-                                    <div class="calen-title">2019 台灣國際人工智慧暨物聯網展</div>
-                                    <div class="calen-font">
-                                        <ul>
-                                            <li>展覽活動期間：2019.08.21 - 2019.08.24</li>
-                                            <li>展覽活動地點：一樓展場</li>
-                                            <li>展覽主辦單位：展昭國際企業股份有限公司</li>
-                                        </ul>
-                                    </div>
-                                </div>
-                        </div>
-
-                        <div class="calen-card-box">
-                            <div class="calen-card_vrte">
-                                <div class="calen-card_head">
-                                    <div class="calen-pic"><a href="calendar_more3.html"><img src="images/eventa03.png"></a></div>
-                                    <div class="calen-card_tab news_blue">展覽</div>
-                                </div>
-                            </div>
-                                <div class="calen-card_issuse">
-                                    <div class="calen-card_date">8/21-8/24</div>
-                                    <div class="calen-title">2019 台北國際模具暨模具製造設備暨3D列印展</div>
-                                    <div class="calen-font">
-                                        <ul>
-                                            <li>展覽活動期間：2019.08.21 - 2019.08.24</li>
-                                            <li>展覽活動地點：一樓展場</li>
-                                            <li>展覽主辦單位：展昭國際企業股份有限公司</li>
-                                        </ul>
-                                    </div>
-                                </div>
-                        </div>
-
+                            </td>
+                          </tr>
+                        </table>
                     </div>
-                    <div class="page_all">
-                        <ul>
-                            <li><</li>
-                            <li class="active">1</li>
-                            <li>2</li>
-                            <li>3</li>
-                            <li>4</li>
-                            <li>5</li>
-                            <li>...</li>
-                            <li>></li>
-                        <ul>
+                    <!-- <div class="mod-organizer_title">票價：</div>
+                    <div class="expo_table">
+                        <div class="ticket_price">
+                            <table width="100%" border="0">
+                              <tr>
+                                <td>VIP區 NT$4,880</td>
+                                <td>A區 NT$3,880</td>
+                                <td>B區 NT$2,880</td>
+                                <td>C區 NT$1,880</td>
+                                <td>身障席 NT$1,440</td>
+                                <td>全區皆為座席</td>
+                              </tr>
+                            </table>
+                        </div>
                     </div>
+                    <div class="news_article">德億企業（股）公司</div>
+                    <div class="mod-organizer_title">主辦單位：</div>
+                    <div class="news_article">德億企業（股）公司</div>
+                    <div class="mod-organizer_title">協辦單位：</div>
+                    <div class="news_article">火爆娛樂</div>
+                    <div class="mod-organizer_title">贊助單位：</div>
+                    <div class="news_article">車主雜誌、美國職籃、美國職棒、磐石保險經紀人、文森保羅</div>
+                    <div class="mod-organizer_title">售票連結：</div>
+                    <div class="news_article"><a href="https://iticket.gmusic.com.tw/application/UTK02/UTK0201_.aspx?PRODUCT_ID=N00FRLC1">https://iticket.gmusic.com.tw/application/UTK02/UTK0201_.aspx?PRODUCT_ID=N00FRLC1</a></div> -->
                 </div>
-
-
             </div>
-
-
         </article>
 
 
