--- a/calendar_more1.html
+++ b/calendar_more1.html
@@ -119,23 +119,25 @@
                     <ul>
                         <li><a href="index.html">首頁</a></li>
                         <li>/</li>
-                        <li class="activeddd">展覽活動一覽</li>
+                        <li><a href="calendar.html">展覽活動一覽</a></li>
+                        <li>/</li>
+                        <li class="activeddd">2019 台灣國際人工智慧暨物聯網展</li>
                     </ul>
                 </div>
             </div>
 
             <div class="orang_wrapper">
                 <div class="news_continer">
-                    <div class="event_more_title">2019 台北國際自動化工業大展</div>
+                    <div class="event_more_title">2019 台灣機器人與智慧自動化展</div>
                     <div class="ticket_poster">
                         <table width="100%" border="0">
                           <tr>
-                            <td width="70%"><img src="images/auto.png"></td>
+                            <td width="70%"><img src="images/eventa01.png"></td>
                             <td width="30%">
                                 <div class="eventpost_title">展覽活動期間：</div>
-                                <div class="news_article">2019.08.21 - 2018.08.24</div>
+                                <div class="news_article">2019.08.21 - 2019.08.24</div>
                                 <div class="eventpost_title">展覽活動地點：</div>
-                                <div class="news_article">一、四樓展場</div>
+                                <div class="news_article">一樓展場</div>
                                 <div class="eventpost_title">展覽主辦單位：</div>
                                 <div class="news_article">展昭國際企業股份有限公司</div>
                                 <div class="eventpost_wrap">
