index link and pic

--- a/index.html
+++ b/index.html
@@ -529,14 +529,48 @@
                     <div class="evnt_viewpic">
                         <a href="calendar_more.html">
                             <div class="evn_box">
-                                <div class="event_pic"><img src="images/auto.png"></div>
+                                <div class="event_pic"><img src="images/eventa01.png"></div>
                                 <div class="calen-card_tab news_blue">展覽</div>
                                 <div class="event_bg">
-                                    <div class="date_title">2019 台北國際自動化工業大展</div>
+                                    <div class="date_title">2019 台灣機器人與智慧自動化展</div>
                                     <div class="event_sub-content">
                                         <ul>
-                                            <li>展覽活動期間：2019.08.21 - 2018.08.24繼續閱讀</li>
-                                            <li>展覽活動地點：一、四樓展場</li>
+                                            <li>展覽活動期間：2019.08.21 - 2019.08.24</li>
+                                            <li>展覽活動地點：一樓展場</li>
+                                            <li>展覽主辦單位：展昭國際企業股份有限公司</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+
+                        <a href="calendar_more.html">
+                            <div class="evn_box">
+                                <div class="event_pic"><img src="images/eventa02.png"></div>
+                                <div class="calen-card_tab news_blue">展覽</div>
+                                <div class="event_bg">
+                                    <div class="date_title">2019 台灣國際人工智慧暨物聯網展</div>
+                                    <div class="event_sub-content">
+                                        <ul>
+                                            <li>展覽活動期間：2019.08.21 - 2019.08.24</li>
+                                            <li>展覽活動地點：一樓展場</li>
+                                            <li>展覽主辦單位：展昭國際企業股份有限公司</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+
+                        <a href="calendar_more.html">
+                            <div class="evn_box">
+                                <div class="event_pic"><img src="images/eventa03.png"></div>
+                                <div class="calen-card_tab news_blue">展覽</div>
+                                <div class="event_bg">
+                                    <div class="date_title">2019 台北國際模具暨模具製造設備暨3D列印展</div>
+                                    <div class="event_sub-content">
+                                        <ul>
+                                            <li>展覽活動期間：2019.08.21 - 2019.08.24</li>
+                                            <li>展覽活動地點：一樓展場</li>
                                             <li>展覽主辦單位：展昭國際企業股份有限公司</li>
                                         </ul>
                                     </div>
