motifly organizers pic

--- a/organizers_item2.html
+++ b/organizers_item2.html
@@ -110,7 +110,7 @@
                     <div class="m-page_font">
                         <div class="page_headtitle">展覽會場</div>
                         <div class="page_headtext">台北南港展覽館2館共有三個展覽空間，可規劃之標準攤位數達2146格
-</div>
+                        </div>
                     </div>
                 </div>
 
@@ -143,7 +143,7 @@
 
                     </ul>
                 </div>
-                <!-- <div class="widget-pic"><img src="images/flow01.jpg"></div> -->
+                <div class="widget-pic"><img src="images/1F.jpg"></div>
                 <div class="expo_table">
                     <table width="100%" border="0">
                       <tr>
