--- a/organizers_item3.html
+++ b/organizers_item3.html
@@ -143,7 +143,7 @@
 
                     </ul>
                 </div>
-                <!-- <div class="widget-pic"><img src="images/flow01.jpg"></div> -->
+                <div class="widget-pic"><img src="images/4F.jpg"></div>
                 <div class="expo_table">
                     <table width="100%" border="0">
                       <tr>
