--- a/organizers_item3.html
+++ b/organizers_item3.html
@@ -140,8 +140,32 @@
                         <!-- <a href="#"><li>尾牙方案</li></a> -->
                         <a href="http://www.twtcnangang.com.tw/zh-tw/"><li>南港一館</li></a>
                         <a href="organizers_item5.html"><li>交通及停車場</li></a>
-
                     </ul>
+                </div>
+                <div class="mod-organizer_title">世貿南港展覽館2館 四樓展場平面圖</div>
+                <div class="editor">
+                    <div class="ed_box"><img src="images/ed01.svg">洗手間</div>
+                    <div class="ed_box"><img src="images/ed02.svg">手扶梯</div>
+                    <!-- <div class="ed_box"><img src="images/ed03.svg">汽車停車格</div>
+                    <div class="ed_box"><img src="images/ed04.svg">捷運</div>
+                    <div class="ed_box"><img src="images/ed05.svg">咖啡／商店</div>
+                    <div class="ed_box"><img src="images/ed06.svg">ATM</div> -->
+                    <div class="ed_box"><img src="images/ed07.svg">電梯</div>
+                    <!-- <div class="ed_box"><img src="images/ed08.svg">機車停車格</div>
+                    <div class="ed_box"><img src="images/ed09.svg">公車站</div>
+                    <div class="ed_box"><img src="images/ed10.svg">餐廳</div>
+                    <div class="ed_box"><img src="images/ed11.svg">TAITRA Lounge</div> -->
+                    <div class="ed_box"><img src="images/ed12.svg">服務台</div>
+                    <!-- <div class="ed_box"><img src="images/ed13.svg">腳踏車停車格</div>
+                    <div class="ed_box"><img src="images/ed14.svg">計程車</div> -->
+                    <div class="ed_box"><img src="images/ed15.svg">醫護室</div>
+                    <div class="ed_box"><img src="images/ed16.svg">逃生口</div>
+                    <div class="ed_box"><img src="images/ed17.svg">貴賓室</div>
+                    <div class="ed_box"><img src="images/ed18.svg">哺集乳室</div>
+                    <div class="ed_box"><img src="images/ed19.svg">辦公室</div>
+                    <div class="ed_box"><img src="images/ed20.svg">簡報室</div>
+                    <div class="ed_box"><img src="images/ed21.svg">男回教祈禱室</div>
+                    <div class="ed_box"><img src="images/ed22.svg">女回教祈禱室</div>
                 </div>
                 <div class="widget-pic"><img src="images/4F.jpg"></div>
                 <div class="expo_table">
