--- a/organizers_item3.html
+++ b/organizers_item3.html
@@ -167,7 +167,7 @@
                     <div class="ed_box"><img src="images/ed21.svg">男回教祈禱室</div>
                     <div class="ed_box"><img src="images/ed22.svg">女回教祈禱室</div>
                 </div>
-                <div class="widget-pic"><img src="images/4F.jpg"></div>
+                <div class="widget-pic"><img src="images/new_4F.jpg"></div>
                 <div class="expo_table">
                     <table width="100%" border="0">
                       <tr>
